# MSAI-LLM-PERFORMANCE

./: .coverage 2  .env-system-test  .env.example  .gitignore  LLMS-START-HERE.md  PRE_REGISTRATION.md  README.md  pyproject.toml  requirements-cuda.txt  requirements.txt  test.txt
backends/: agentic.py  base.py  factory.py  llm_client.py  monolithic.py  swarm.py
config/: config.yaml
docs/: A40_DEPLOY_V2.md  AZURE_CLOUD_CELL_RUNBOOK.md  AZURE_FOUNDRY_PHASE.md  ENGINEERING_LOG.md  HANDOFF_M5_MAX.md  HPC_DESIGN.md  HPC_RERUN_HANDOFF.md  HPC_RUNBOOK.md  M5_MAX_N5_RUNBOOK.md  MSAI-LLM-PERFORMANCE.code-workspace  SHADOW_TRIAL_LOG.md  SHADOW_VS_M5_COMPARISON.md  STRETCH_GOALS.md  TASK_TIERS.md  frontier_v2_question_set.tex  prompt_provenance_guide.tex  shadow_pc_guide.tex  status_report_2026-07-03.tex  status_report_2026-07-09.tex  status_report_2026-07-14.tex
harness/: __init__.py  analysis.py  analyze.py  config.py  graders.py  hostinfo.py  judge.py  prompts.py  report.py  results.py  run.py  runner.py  task_loader.py  telemetry.py
prompts/: README.md
results/: POST_RUN_NOTE_2026-07-15_provenance_and_taxonomy.md  POST_RUN_NOTE_2026-07-15_swarm_read_timeout.md  POST_RUN_NOTE_agentic_empty_answer.md  README.md  analysis.md  calib-code-ollama-14b.jsonl  calib-code-v21-ollama-14b.jsonl  frontier-external-32b.jsonl  frontier-v2-calib-14b.jsonl  frontier-v2-local-ollama-14b-r2.jsonl  frontier-v2-local-ollama-14b.jsonl  frontier-v2-shadow-n5-14b.jsonl  frontier-v2-shadow-trial-14b.jsonl  frontier-v2.1-hpc-14b-20-agentic.jsonl  hosts.csv  local.jsonl  (+9 more)
results-HPC/: README.md
(+100 files in other folders)
